force-app/main/default/objects/Contact/fields/Abacus_card_payment__c.field-meta.xml
<CustomField>
    <fullName>Abacus_card_payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Abacus card payment</label>
    <type>Checkbox</type>
</CustomField>