force-app/main/default/objects/Contact/fields/Activities_assistance__c.field-meta.xml
<CustomField>
    <fullName>Activities_assistance__c</fullName>
    <label>Activities assistance</label>
    <length>250</length>
    <type>Text</type>
</CustomField>