force-app/main/default/objects/Contact/fields/Age_child_2__c.field-meta.xml
<CustomField>
    <fullName>Age_child_2__c</fullName>
    <formula>IF( NOT( ISBLANK(  Date_of_birth_child_2__c ) ) ,
  IF( DATE( 2000 , MONTH( Date_of_birth_child_2__c ) , DAY( Date_of_birth_child_1__c ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),
     YEAR (Today()) - YEAR ( Date_of_birth_child_2__c  ),
     YEAR (Today()) - YEAR ( Date_of_birth_child_2__c ) -1 ),
  null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age child 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>