force-app/main/default/objects/Contact/fields/Balance_Abacs__c.field-meta.xml
<CustomField>
    <fullName>Balance_Abacs__c</fullName>
    <label>Balance Abacs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>