force-app/main/default/objects/Contact/fields/CC_Username__c.field-meta.xml
<CustomField>
    <fullName>CC_Username__c</fullName>
    <description>This field holds commerce cloud username</description>
    <inlineHelpText>This field holds commerce cloud username</inlineHelpText>
    <label>CC Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>