force-app/main/default/objects/Contact/fields/Client_number__c.field-meta.xml
<CustomField>
    <fullName>Client_number__c</fullName>
    <label>Client number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>