force-app/main/default/objects/Contact/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <label>County</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>l&apos;Alt Camp</fullName>
            </value>
            <value>
                <fullName>l&apos;Alt Empordà</fullName>
            </value>
            <value>
                <fullName>l&apos;Alt Penedès</fullName>
            </value>
            <value>
                <fullName>l&apos;Alt Urgell</fullName>
            </value>
            <value>
                <fullName>l&apos;Alta Ribagorça</fullName>
            </value>
            <value>
                <fullName>l&apos;Anoia</fullName>
            </value>
            <value>
                <fullName>l&apos;Aran</fullName>
            </value>
            <value>
                <fullName>el Bages</fullName>
            </value>
            <value>
                <fullName>el Baix Camp</fullName>
            </value>
            <value>
                <fullName>el Baix Ebre</fullName>
            </value>
            <value>
                <fullName>el Baix Empordà</fullName>
            </value>
            <value>
                <fullName>el Baix Llobregat</fullName>
            </value>
            <value>
                <fullName>el Baix Penedès</fullName>
            </value>
            <value>
                <fullName>el Barcelonès</fullName>
            </value>
            <value>
                <fullName>el Berguedà</fullName>
            </value>
            <value>
                <fullName>la Cerdanya</fullName>
            </value>
            <value>
                <fullName>la Conca de Barberà</fullName>
            </value>
            <value>
                <fullName>el Garraf</fullName>
            </value>
            <value>
                <fullName>les Garrigues</fullName>
            </value>
            <value>
                <fullName>la Garrotxa</fullName>
            </value>
            <value>
                <fullName>el Gironès</fullName>
            </value>
            <value>
                <fullName>el Maresme</fullName>
            </value>
            <value>
                <fullName>el Moianès</fullName>
            </value>
            <value>
                <fullName>el Montsià</fullName>
            </value>
            <value>
                <fullName>la Noguera</fullName>
            </value>
            <value>
                <fullName>Osona</fullName>
            </value>
            <value>
                <fullName>el Pallars Jussà</fullName>
            </value>
            <value>
                <fullName>el Pallars Sobirà</fullName>
            </value>
            <value>
                <fullName>el Pla d&apos;Urgell</fullName>
            </value>
            <value>
                <fullName>el Pla de l&apos;Estany</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>