force-app/main/default/objects/Contact/fields/CSV__c.field-meta.xml
<CustomField>
    <fullName>CSV__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Capital Social Voluntario</description>
    <label>CSV</label>
    <type>Checkbox</type>
</CustomField>