force-app/main/default/objects/Contact/fields/Customer_Auth_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Auth_Status__c</fullName>
    <label>Customer Auth Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>guest</fullName>
                <label>Guest</label>
            </value>
            <value>
                <fullName>registered</fullName>
                <label>Registered</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>