force-app/main/default/objects/Contact/fields/Customer_classification__c.field-meta.xml
<CustomField>
    <fullName>Customer_classification__c</fullName>
    <label>Customer classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Soci</fullName>
            </value>
            <value>
                <fullName>Beneficiari</fullName>
            </value>
            <value>
                <fullName>Client no soci</fullName>
            </value>
            <value>
                <fullName>No client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>