force-app/main/default/objects/Contact/fields/Customer_since__c.field-meta.xml
<CustomField>
    <fullName>Customer_since__c</fullName>
    <label>Customer since</label>
    <type>Date</type>
</CustomField>