force-app/main/default/objects/Contact/fields/Date_of_birth_child_1__c.field-meta.xml
<CustomField>
    <fullName>Date_of_birth_child_1__c</fullName>
    <label>Date of birth child 1</label>
    <type>Date</type>
</CustomField>