force-app/main/default/objects/Contact/fields/Date_of_birth_child_2__c.field-meta.xml
<CustomField>
    <fullName>Date_of_birth_child_2__c</fullName>
    <label>Date of birth child  2</label>
    <type>Date</type>
</CustomField>