force-app/main/default/objects/Contact/fields/Deferred_promotion__c.field-meta.xml
<CustomField>
    <fullName>Deferred_promotion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deferred promotion</label>
    <type>Checkbox</type>
</CustomField>