force-app/main/default/objects/Contact/fields/Direct_Debit__c.field-meta.xml
<CustomField>
    <fullName>Direct_Debit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Domiciliació bancária</description>
    <label>Direct Debit</label>
    <type>Checkbox</type>
</CustomField>