force-app/main/default/objects/Contact/fields/DNI_NIE_Pasaporte__c.field-meta.xml
<CustomField>
    <fullName>DNI_NIE_Pasaporte__c</fullName>
    <label>DNI/NIE/Pasaporte</label>
    <length>50</length>
    <type>Text</type>
</CustomField>