force-app/main/default/objects/Contact/fields/From_SFCC__c.field-meta.xml
<CustomField>
    <fullName>From_SFCC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field holds value if Contact is created from Salesforce Commerce Cloud or not.</description>
    <inlineHelpText>This field holds value if Contact is created from Salesforce Commerce Cloud or not.</inlineHelpText>
    <label>From SFCC</label>
    <type>Checkbox</type>
</CustomField>