force-app/main/default/objects/Contact/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Home</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Dona</label>
            </value>
            <value>
                <fullName>No Binari</fullName>
            </value>
            <value>
                <fullName>No Informat</fullName>
            </value>
            <value>
                <fullName>0</fullName>
                <label>...</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>