force-app/main/default/objects/Contact/fields/Has_children__c.field-meta.xml
<CustomField>
    <fullName>Has_children__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has children</label>
    <type>Checkbox</type>
</CustomField>