force-app/main/default/objects/Contact/fields/Has_open_incidents__c.field-meta.xml
<CustomField>
    <fullName>Has_open_incidents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has open incidents?</label>
    <type>Checkbox</type>
</CustomField>