force-app/main/default/objects/Contact/fields/Incident_dates__c.field-meta.xml
<CustomField>
    <fullName>Incident_dates__c</fullName>
    <label>Incident dates</label>
    <type>Date</type>
</CustomField>