force-app/main/default/objects/Contact/fields/Incident_history__c.field-meta.xml
<CustomField>
    <fullName>Incident_history__c</fullName>
    <label>Incident history</label>
    <length>250</length>
    <type>Text</type>
</CustomField>