force-app/main/default/objects/Contact/fields/Interests_of_Soci__c.field-meta.xml
<CustomField>
    <fullName>Interests_of_Soci__c</fullName>
    <label>Interests of Soci</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Educació</fullName>
            </value>
            <value>
                <fullName>Lleure</fullName>
            </value>
            <value>
                <fullName>Cultura</fullName>
            </value>
            <value>
                <fullName>Cooperació</fullName>
            </value>
            <value>
                <fullName>Medi ambient</fullName>
            </value>
            <value>
                <fullName>Ofertes i promocions</fullName>
            </value>
            <value>
                <fullName>Benestar</fullName>
            </value>
            <value>
                <fullName>Llibres</fullName>
            </value>
            <value>
                <fullName>Llibres infantils</fullName>
            </value>
            <value>
                <fullName>Joguines</fullName>
            </value>
            <value>
                <fullName>Manualitats</fullName>
            </value>
            <value>
                <fullName>Papereria</fullName>
            </value>
            <value>
                <fullName>Tecnologia</fullName>
            </value>
            <value>
                <fullName>Música</fullName>
            </value>
            <value>
                <fullName>Escriure</fullName>
            </value>
            <value>
                <fullName>Llegir</fullName>
            </value>
            <value>
                <fullName>Viatjar</fullName>
            </value>
            <value>
                <fullName>Espectacles</fullName>
            </value>
            <value>
                <fullName>Jugar en família</fullName>
            </value>
            <value>
                <fullName>Tallers per adults</fullName>
            </value>
            <value>
                <fullName>Activitats infantils</fullName>
            </value>
            <value>
                <fullName>Presentacions de llibres</fullName>
            </value>
            <value>
                <fullName>Idees per regalar</fullName>
            </value>
            <value>
                <fullName>Fishing</fullName>
                <isActive>false</isActive>
                <label>Fishing</label>
            </value>
            <value>
                <fullName>Reading</fullName>
                <isActive>false</isActive>
                <label>Reading</label>
            </value>
            <value>
                <fullName>Singing</fullName>
                <isActive>false</isActive>
                <label>Singing</label>
            </value>
            <value>
                <fullName>Walking</fullName>
                <isActive>false</isActive>
                <label>Walking</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>