force-app/main/default/objects/Contact/fields/List_of_registered_activities__c.field-meta.xml
<CustomField>
    <fullName>List_of_registered_activities__c</fullName>
    <label>List of registered activities</label>
    <length>250</length>
    <type>Text</type>
</CustomField>