force-app/main/default/objects/Contact/fields/Locking_customer__c.field-meta.xml
<CustomField>
    <fullName>Locking_customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Locking customer</label>
    <type>Checkbox</type>
</CustomField>