force-app/main/default/objects/Contact/fields/Maximum_weekly_communications__c.field-meta.xml
<CustomField>
    <fullName>Maximum_weekly_communications__c</fullName>
    <label>Maximum weekly communications</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sense restriccions</fullName>
            </value>
            <value>
                <fullName>5 a la setmana</fullName>
            </value>
            <value>
                <fullName>3 a la setmana</fullName>
            </value>
            <value>
                <fullName>2 a la setmana</fullName>
            </value>
            <value>
                <fullName>1 a la setmana</fullName>
            </value>
            <value>
                <fullName>1 cada dos setmanes</fullName>
            </value>
            <value>
                <fullName>1 al mes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>