force-app/main/default/objects/Contact/fields/Member_beneficiary_number__c.field-meta.xml
<CustomField>
    <fullName>Member_beneficiary_number__c</fullName>
    <label>Member beneficiary number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>