force-app/main/default/objects/Contact/fields/NPS_Average_Scoring__c.field-meta.xml
<CustomField>
    <fullName>NPS_Average_Scoring__c</fullName>
    <label>NPS Average Scoring</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Detractor</fullName>
            </value>
            <value>
                <fullName>Promotor</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>