force-app/main/default/objects/Contact/fields/Occupation__c.field-meta.xml
<CustomField>
    <fullName>Occupation__c</fullName>
    <label>Occupation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administratiu</fullName>
            </value>
            <value>
                <fullName>Altres</fullName>
            </value>
            <value>
                <fullName>Comerç</fullName>
            </value>
            <value>
                <fullName>Construcció</fullName>
            </value>
            <value>
                <fullName>Directiu Empresa</fullName>
            </value>
            <value>
                <fullName>Empresari</fullName>
            </value>
            <value>
                <fullName>Ensenyament</fullName>
            </value>
            <value>
                <fullName>Estudiant</fullName>
            </value>
            <value>
                <fullName>Funcionari</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>