force-app/main/default/objects/Contact/fields/Organization_for_sale__c.field-meta.xml
<CustomField>
    <fullName>Organization_for_sale__c</fullName>
    <label>Organization for sale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Org. Vendes Abacus</fullName>
            </value>
            <value>
                <fullName>Org. Vendes Ruc Savi</fullName>
            </value>
            <value>
                <fullName>Org. Ven PME Saragos</fullName>
            </value>
            <value>
                <fullName>Org. Ven PME Azarbe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>