force-app/main/default/objects/Contact/fields/osf_allow_checkout__c.field-meta.xml
<CustomField>
    <fullName>osf_allow_checkout__c</fullName>
    <defaultValue>true</defaultValue>
    <description>if it is TRUE then the user is allowed to checkout, otherwise, he/she is not able to do that.</description>
    <inlineHelpText>if it is TRUE then the user is allowed to checkout, otherwise, he/she is not able to do that.</inlineHelpText>
    <label>Allow Checkout</label>
    <type>Checkbox</type>
</CustomField>