force-app/main/default/objects/Contact/fields/osf_contact_external_id__c.field-meta.xml
<CustomField>
    <fullName>osf_contact_external_id__c</fullName>
    <externalId>true</externalId>
    <label>Contact External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>