force-app/main/default/objects/Contact/fields/osf_role__c.field-meta.xml
<CustomField>
    <fullName>osf_role__c</fullName>
    <description>Role of the User</description>
    <inlineHelpText>Role of the User</inlineHelpText>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard User</fullName>
                <default>true</default>
                <label>Standard User</label>
            </value>
            <value>
                <fullName>Supervisor</fullName>
            </value>
            <value>
                <fullName>Account Administrator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>