force-app/main/default/objects/Contact/fields/osf_supervisor_2__c.field-meta.xml
<CustomField>
    <fullName>osf_supervisor_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supervisor 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Supervisor 2 Contacts</relationshipLabel>
    <relationshipName>osf_supervisor_2_contacts</relationshipName>
    <type>Lookup</type>
</CustomField>