force-app/main/default/objects/Contact/fields/osf_supervisor__c.field-meta.xml
<CustomField>
    <fullName>osf_supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supervisor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Supervisor Contacts</relationshipLabel>
    <relationshipName>osf_supervisor_contacts</relationshipName>
    <type>Lookup</type>
</CustomField>