force-app/main/default/objects/Contact/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <label>Province</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Àlaba</fullName>
            </value>
            <value>
                <fullName>Albacete</fullName>
            </value>
            <value>
                <fullName>Alacant</fullName>
            </value>
            <value>
                <fullName>Almeria</fullName>
            </value>
            <value>
                <fullName>Àvila</fullName>
            </value>
            <value>
                <fullName>Badajoz</fullName>
            </value>
            <value>
                <fullName>Les Balears</fullName>
            </value>
            <value>
                <fullName>Barcelona</fullName>
            </value>
            <value>
                <fullName>Burgos</fullName>
            </value>
            <value>
                <fullName>Càceres</fullName>
            </value>
            <value>
                <fullName>Cadis</fullName>
            </value>
            <value>
                <fullName>Castelló</fullName>
            </value>
            <value>
                <fullName>Ciudad Real</fullName>
            </value>
            <value>
                <fullName>Còrdoba</fullName>
            </value>
            <value>
                <fullName>La Corunya</fullName>
            </value>
            <value>
                <fullName>Conca</fullName>
            </value>
            <value>
                <fullName>Girona</fullName>
            </value>
            <value>
                <fullName>Granada</fullName>
            </value>
            <value>
                <fullName>Guadalajara</fullName>
            </value>
            <value>
                <fullName>Guipúscoa</fullName>
            </value>
            <value>
                <fullName>Huelva</fullName>
            </value>
            <value>
                <fullName>Osca</fullName>
            </value>
            <value>
                <fullName>Jaén</fullName>
            </value>
            <value>
                <fullName>Lleó</fullName>
            </value>
            <value>
                <fullName>Lleida</fullName>
            </value>
            <value>
                <fullName>La Rioja</fullName>
            </value>
            <value>
                <fullName>Lugo</fullName>
            </value>
            <value>
                <fullName>Madrid</fullName>
            </value>
            <value>
                <fullName>Màlaga</fullName>
            </value>
            <value>
                <fullName>Múrcia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>