force-app/main/default/objects/Contact/fields/Recipient_address__c.field-meta.xml
<CustomField>
    <fullName>Recipient_address__c</fullName>
    <inlineHelpText>Direcció Obsequiat</inlineHelpText>
    <label>Recipient address</label>
    <length>250</length>
    <type>Text</type>
</CustomField>