force-app/main/default/objects/Contact/fields/Recipient_first_surname__c.field-meta.xml
<CustomField>
    <fullName>Recipient_first_surname__c</fullName>
    <inlineHelpText>1r apellido obsequiado</inlineHelpText>
    <label>Recipient first surname</label>
    <length>250</length>
    <type>Text</type>
</CustomField>