force-app/main/default/objects/Contact/fields/Recipient_name__c.field-meta.xml
<CustomField>
    <fullName>Recipient_name__c</fullName>
    <inlineHelpText>Nombre obsequiado</inlineHelpText>
    <label>Recipient name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>