force-app/main/default/objects/Contact/fields/Recipient_second_surname__c.field-meta.xml
<CustomField>
    <fullName>Recipient_second_surname__c</fullName>
    <inlineHelpText>2o apellido obsequiado</inlineHelpText>
    <label>Recipient second surname</label>
    <length>250</length>
    <type>Text</type>
</CustomField>